# devlog

./: Cargo.toml  README.md  USAGE.ja.md  USAGE.md
src/: activity.rs  codex.rs  config.rs  gitlog.rs  main.rs  report.rs  summarize.rs  transcript.rs
